# md-notes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  claude.md  entrypoint.sh  justfile  openhost.toml  pyproject.toml  requirements.txt
docs/: federation.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  readme.md  screenshots.html  test-page.mjs  tsconfig.json  vite.config.lan.mts  vite.config.ts
frontend/e2e/: debug-vim.spec.ts  phase1-editor.spec.ts  phase2-vimrc.spec.ts  phase3-server.spec.ts  phase4-sync.spec.ts  phase5-sharing.spec.ts
frontend/playwright_tests/: debug-vim.spec.ts  list-screenshots.spec.ts  phase1-editor.spec.ts  phase2-vimrc.spec.ts  phase3-server.spec.ts  phase4-sync.spec.ts  phase5-sharing.spec.ts  phase5-vault-switch.spec.ts  test-helpers.ts  vim-easyclip.spec.ts
frontend/public/: manifest.webmanifest  runtime-config.js
frontend/scripts/: gen-icons.mjs
frontend/src/: App.tsx  app-settings.test.ts  app-settings.ts  config.ts  default.vimrc  index.tsx  main.ts  screenshots.tsx  style.css
frontend/src/api/: client.ts  connection.ts  invites.test.ts  invites.ts  peer.test.ts  peer.ts  search-session.ts  sync.ts  types.ts  vault-ops.ts
frontend/src/components/: CommentsPanel.tsx  EditorLayout.tsx  FederationConnect.tsx  InputDialog.tsx  MobileShell.tsx  QuickOpen.tsx  SearchModal.tsx  SettingsModal.tsx  ShareModal.tsx  Sidebar.tsx  VaultPicker.tsx  VaultShareModal.tsx  search-highlight.test.ts  search-highlight.ts
frontend/src/components/sidebar/: FileTree.tsx  MobileSidebar.tsx  OpsDialog.tsx  Sidebar.tsx  SyncFooter.tsx  VaultSwitcher.tsx  file-ops.ts  icons.tsx  paths.test.ts  paths.ts  types.ts
frontend/src/editor/: awareness.test.ts  clipboard-sync.test.ts  clipboard-sync.ts  editor-settings.test.ts  editor-settings.ts  editor.ts  empty-line-caret.ts  fold-persistence.test.ts  fold-persistence.ts  foldChevrons.ts  folding.test.ts  folding.ts  header-anchor.test.ts  header-anchor.ts  header-link-button.ts  heading.test.ts  heading.ts  sync.test.ts  sync.ts  tab.test.ts  tab.ts  tasks.test.ts  tasks.ts  undo-redo.ts  vim.test.ts  vim.ts
frontend/src/editor/commands/: README.md  commands.ts  history.ts
frontend/src/editor/comments/: anchors.test.ts  anchors.ts  controller.test.ts  controller.ts  extension.ts  identity.ts  stack-cards.test.ts  stack-cards.ts  types.ts
frontend/src/editor/indent/: detectIndent.test.ts  detectIndent.ts  indentUnitField.ts  pasteIndent.test.ts  pasteIndent.ts
frontend/src/editor/lang-markdown/: codeBlockInList.test.ts  codeBlockInList.ts  commands.test.ts  commands.ts  index.ts  markdown.ts
frontend/src/editor/live-preview/: index.ts
frontend/src/editor/live-preview/core/: facets.ts  listContext.ts  listLineLayout.ts  mouseSelecting.ts  pluginUpdateHelper.ts  shouldShowSource.ts  spaceWidth.test.ts  spaceWidth.ts
frontend/src/editor/live-preview/plugins/: bullet.ts  codeBlock.ts  codeBlockEffects.ts  codeBlockInList.test.ts  codeBlockReveal.test.ts  codeBlockSelection.test.ts  image.ts  link.test.ts  link.ts  listIndent.test.ts  listIndent.ts  livePreview.test.ts  livePreview.ts  markdownStyle.ts  task.ts
frontend/src/editor/live-preview/theme/: default.ts
frontend/src/editor/live-preview/utils/: codeHighlight.ts  imageLoader.ts
frontend/src/editor/live-preview/widgets/: codeBlockWidget.ts  imageWidget.ts  linkWidget.ts
frontend/src/editor/mobile/: foldChevrons.ts  theme.ts
frontend/src/ui/: editor-layout.ts  settings.ts  sidebar.ts  vault-picker.ts
server/: __main__.py  app.py  auth.py  config.py  db.py  vault.py
server/core/: sync.py  vaults.py
server/models/: common.py  share.py
server/openapi/: generate.py  openapi.json
server/routes/: files.py  settings.py  share.py  sync.py  vaults.py
server/src/server/: __main__.py
server/src/server/core/: comments.py  config.py  crdt_store.py  db.py  federation.py  files.py  history.py  search.py  sync.py  vaults.py
server/src/server/models/: comments.py  federation.py  files.py  search.py  settings.py  share.py  vaults.py
server/src/server/web/: app.py  auth.py
server/src/server/web/api/: channel.py  comments.py  docs.py  federation.py  (+6 more)
server/web/: auth.py
server/web/api/: files.py  settings.py  share.py
specs/md-notes-app/: spec.md
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: commands.rs  main.rs
tests/: conftest.py  mock_router.py  run_e2e.py  run_e2e_local.py  test_app.py  test_comments.py  test_editor.py  test_federation.py  test_federation_e2e.py  test_files.py  test_room_lifecycle.py  test_search.py  test_sync_persistence.py
(+2 files in other folders)
