[project]
name = "md-notes"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
dependencies = [
    "quart>=0.20",
    "quart-cors>=0.8",
    "hypercorn>=0.17",
    "pycrdt>=0.12",
    "pycrdt-websocket>=0.16",
]

[project.scripts]
openhost = "self_host_cli.main:main"
oh = "compute_space_cli.main:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["self_host_cli/src/self_host_cli", "compute_space/src/compute_space", "compute_space_cli/src/compute_space_cli"]


[tool.ruff]
line-length = 119
exclude = [
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "UP",     # pyupgrade (modern Python syntax)
    "I",      # isort
    "PLC0415", # import-outside-top-level
    # "PTH",  # use pathlib instead of os.path — enable after migrating codebase (~405 violations)
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
known-first-party = [
    "compute_space",
    "compute_space_cli",
    "self_host_cli",
    "oauth",
]

[tool.mypy]
python_version = "3.12"
files = ["compute_space/src/compute_space", "compute_space_cli/src/compute_space_cli", "apps/oauth_provider/src/oauth_provider"]
strict = true
ignore_missing_imports = true
exclude = ["compute_space/src/compute_space/tests/"]
