[project]
name = "md-notes"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
dependencies = [
    "litestar>=2.12",
    "uvicorn[standard]>=0.30",
    "attrs>=24.0",
    "pycrdt>=0.12",
    "pycrdt-websocket>=0.16",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server/src/server"]

[tool.ruff]
line-length = 119
exclude = [
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "UP",     # pyupgrade (modern Python syntax)
    "I",      # isort
    "PLC0415", # import-outside-top-level
    # "PTH",  # use pathlib instead of os.path — enable after migrating codebase (~405 violations)
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
known-first-party = [
    "server",
]

[tool.mypy]
python_version = "3.12"
files = ["server/src/server"]
strict = true
ignore_missing_imports = true
exclude = []
