[project]
name = "md-notes"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
dependencies = [
    "litestar>=2.22.0",
    "hypercorn>=0.17",
    "attrs>=24.0",
    "pycrdt>=0.12",
    "pycrdt-websocket>=0.16",
    "loguru>=0.7.3",
    "rapidfuzz>=3.14.5",
    "numpy>=2.5.1",
    "pathspec>=1.1.1",
    "anyio>=4.13.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "openhost[test-harness] @ git+https://github.com/imbue-openhost/openhost@main",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server/src/server"]

[tool.ruff]
line-length = 119
exclude = [
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "UP",     # pyupgrade (modern Python syntax)
    "I",      # isort
    "PLC0415", # import-outside-top-level
    # "PTH",  # use pathlib instead of os.path — enable after migrating codebase (~405 violations)
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
known-first-party = [
    "server",
]

[tool.pytest.ini_options]
markers = ["containers: tests requiring podman container build"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["server/src"]
packages = ["server"]
strict = true
ignore_missing_imports = true
exclude = []
